OKAY - fixed white-space becomes no wrap when there are commas on the string
in catalogue page

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -375,6 +375,12 @@ article .entry-title
 .btn-success:active
 {
     background-color: rgb(83, 134, 49);
+    
+}
+
+.entry-title
+{
+ white-space:normal;
 }
 /*//bootstrap override*/
 body
